# vision-trainer

./: .gitignore  AGENTS.md  README.md  YOLO.md  pyproject.toml
.agent/: MEMORY.md  TASK_BRIEF.md
.github/workflows/: contracts.yml
configs/export/: onnx_fp32.yaml
configs/train/: curated_release_smoke.yaml  phase1_ddp.yaml  phase1_eval.yaml  phase1_smoke.yaml
docs/: EGOHUMANS_VISION_TRAINER_TASK_SPEC.md  METRICS_AND_DIAGNOSTICS.md  MODULE_MAP.md  PROJECT_STATE.md  PROPOSED_PLAN_v2.md  SYSTEM_DESIGN_v2.md  experiment_policy.md  package_contracts.md  promotion_workflow.md  training_workflow.md
docs/agent/tasks/20260427_1630_bootstrap_smoke_validation/: CLOSEOUT.md  MEMORY.md  TASK_BRIEF.md  yolo_smoketestfail1.txt
docs/agent/tasks/20260427_1732_handoff_infrastructure/: CLOSEOUT.md  MEMORY.md  TASK_BRIEF.md
docs/agent/tasks/20260427_2041_contract_acceptance_checks/: CLOSEOUT.md  MEMORY.md  TASK_BRIEF.md
docs/handoffs/: CURATOR_TO_TRAINER.md  DESKTOP_TO_EDGE.md  EDGE_TO_DESKTOP.md  README.md  WORKSPACE_NEXT_STEPS_20260430.md
schemas/: README.md  curated_release_manifest.schema.json  phase1_manifest.schema.json  phase2_manifest.schema.json
scripts/: export_candidate.sh  train_phase1_smoke.sh  validate_env.sh
src/bootstrap_train/: __init__.py  evaluate.py  export.py  ingest_phase1.py  inspect_phase2.py  manifests.py  train.py  validate_packages.py
tests/: __init__.py  test_contract_artifacts.py  test_validate_packages.py  test_workflow_commands.py
tests/fixtures/: phase1_manifest_minimal.json  phase2_manifest_minimal.json
(+2 files in other folders)
